force-app/main/default/objects/FivestarSetting__mdt/FivestarSetting__mdt.object-meta.xml
<CustomObject>
    <label>Fivestar Setting</label>
    <pluralLabel>Fivestar Settings</pluralLabel>
</CustomObject>