force-app/main/default/objects/FivestarSetting__mdt/fields/Allow_Essential_Engine_Emails__c.field-meta.xml
<CustomField>
    <fullName>Allow_Essential_Engine_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Essential Engine Emails</label>
    <type>Checkbox</type>
</CustomField>