force-app/main/default/objects/FivestarSetting__mdt/fields/Allow_Subscription_Payments__c.field-meta.xml
<CustomField>
    <fullName>Allow_Subscription_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if you&apos;d like to allow subscription payments</inlineHelpText>
    <label>Allow Subscription Payments</label>
    <type>Checkbox</type>
</CustomField>