force-app/main/default/objects/FivestarSetting__mdt/fields/Allow_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Allow_Subscriptions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if you want to run subscription automation.</inlineHelpText>
    <label>Allow Subscriptions</label>
    <type>Checkbox</type>
</CustomField>