force-app/main/default/objects/FivestarSetting__mdt/fields/EssentialEngLogoUrl__c.field-meta.xml
<CustomField>
    <fullName>EssentialEngLogoUrl__c</fullName>
    <inlineHelpText>Do not change!</inlineHelpText>
    <label>EssentialEngLogoUrl</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>