force-app/main/default/objects/FivestarSetting__mdt/fields/Send_Essential_Engine_Payment_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Send_Essential_Engine_Payment_Receipts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Essential Engine Payment Receipts</label>
    <type>Checkbox</type>
</CustomField>